@@ -1,3 +1,9 @@
+2009-09-02  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>
+
+	* tag V00-04-00
+	* reorganization of configuration files
+
+
 2009-08-31  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>
 
 	* tag V00-03-03
